# LoongChipX

./: .gitignore  README.md  README.zh-cn.md
design/filelists/: common_files.lst  impl_fpga_files.lst
design/soc/rtl/: axi_memory_inf.v  cpu_subsystem.v  cpu_subsystem_little.v  soc_top_sim.v  soc_top_xlnx.v
design/sys/filelists/: ccx_files.lst  core_164_files.lst  core_364_files.lst  llc_files.lst
impl/: Makefile
impl/constraints/: axvu13p.xdc  vcu118-all.xdc  vcu118.xdc  vcu129-all.xdc  vcu129.xdc
impl/ext/loader/: Makefile  dbg_uart.c  dummy_payload.c  entry.h  laregs.h  link.lds  loongarchaddrspace.h  payload.S
ip/amd/common/: xlnx_vivado.mk
ip/amd/xlnx_cpu_cconvt/: Makefile
ip/amd/xlnx_ddr4_reset/: Makefile
scripts/: gen_axi_ram.py  gen_board_config.py  gen_mcs.tcl  gen_sim_config.py  gen_upload_data.py  gen_vivado_lcx_filelsts.py  run.tcl  upload_bs_ddr_and_run.tcl
verif/common/: Makefile_obj  clean.py  print_trace  sim_main.cpp  vcs.mk  verilator.mk
verif/common/exec_binary/: rand_boot.s
verif/common/memory/: memorysim.h  memorysim_check.cpp  memorysim_read.cpp  memorysim_write.cpp
verif/common/softfpu/: softfloat.S  softfloat.h  softfpu.cpp  (+1 more)
verif/config/: config.coremark  config.hello  config.kernel  config.kernel.checkpoint  config.kernel.random
verif/filelists/: vcs_bigcore_files.lst  vcs_hybrid_files.lst  vcs_littlecore_files.lst  verilator_bigcore_files.lst  verilator_littlecore_files.lst
verif/verilator/VerSimApp/: CMakeLists.txt  Makefile  board.h  files.verdi.lst
verif/verilator/VerSimApp/save/: soc_cpu_pipeline_vl.rc
(+792 files in other folders)
